tests/auto/network/socket/qudpsocket/tst_qudpsocket.cpp
@@ -1202,6 +1202,7 @@ void tst_QUdpSocket::multicast_data()
     QHostAddress groupAddress = QHostAddress("239.255.118.62");
     QHostAddress any6Address = QHostAddress(QHostAddress::AnyIPv6);
     QHostAddress group6Address = QHostAddress("FF01::114");
+    QHostAddress dualAddress = QHostAddress(QHostAddress::Any);
 
     QTest::addColumn<QHostAddress>("bindAddress");
     QTest::addColumn<bool>("bindResult");
@@ -1213,6 +1214,8 @@ void tst_QUdpSocket::multicast_data()
     QTest::newRow("valid bind, group ipv6 address") << any6Address << true << group6Address << true;
     QTest::newRow("valid bind, invalid group ipv6 address") << any6Address << true << any6Address << false;
     QTest::newRow("same bind, group ipv6 address") << group6Address << true << group6Address << true;
+    QTest::newRow("dual bind, group ipv4 address") << dualAddress << true << groupAddress << false;
+    QTest::newRow("dual bind, group ipv6 address") << dualAddress << true << group6Address << true;
 }
 
 void tst_QUdpSocket::multicast()
